--- a/MyDealTask.WebApi/MyDealTask.WebApi.csproj
+++ b/MyDealTask.WebApi/MyDealTask.WebApi.csproj
@@ -182,6 +182,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Helpers\BaseApiController.cs" />
+    <Compile Include="Helpers\CatchAllExceptionFilterAttribute.cs" />
     <Compile Include="Helpers\ImportFileParamType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
